# data-plot

./: .gitignore  CMakeLists.txt  README.md  axis_options.hpp  cartesian_world.cpp  cartesian_world.hpp  color.hpp  dataset.cpp  dataset.hpp  function.hpp  function_render_options.hpp  grid.hpp  main.cpp  point_options.hpp
examples/: e1.cpp
expression/: binary_base.hpp  mul.hpp  sub.hpp  sum.hpp  value.hpp
